@@ -6,6 +6,10 @@ HBase Change Log
                iteration, edits are aggregated up into the millions
    HBASE-505   Region assignments should never time out so long as the region
                server reports that it is processing the open request
+
+  NEW FEATURES
+   HBASE-548   Tool to online single region
+
 Release 0.1.0
 
   INCOMPATIBLE CHANGES
